--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,112 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseurl = "http://yuxguo.github.io"
+title = "YuxuanGuo"
+
+theme = "hugo-coder"
+
+languagecode = "en"
+defaultcontentlanguage = "en"
+
+paginate = 20
+canonifyurls = true
+
+pygmentsstyle = "b2"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+disqusShortname = "YuxuanGuo"
+googleAnalytics = "UA-123-45"
+
+[params]
+    author = "YuxuanGuo"
+    description = "YuxuanGuo's personal website"
+    keywords = "blog,researcher,personal"
+    info = "Student"
+    avatarurl = "images/avatar.jpg"
+    # gravatar = "john.doe@example.com"
+    # footercontent = "Enter a text here."
+
+    dateformat = "January 2, 2006"
+
+    hideFooter = true
+    hideCredits = true
+    hideCopyright = true
+    since = 2020
+
+    # Git Commit in Footer, uncomment the line below to enable it.
+    commit = "https://github.com/luizdepra/hugo-coder/tree/"
+
+    rtl = false
+
+    # Specify light/dark colorscheme
+    # Supported values:
+    # "auto" (use preference set by browser)
+    # "dark" (dark background, light foreground)
+    # "light" (light background, dark foreground) (default)
+    colorscheme = "auto"
+
+    # Series see also post count
+    maxSeeAlsoItems = 5
+
+    # Enable Twemoji
+    enableTwemoji = true
+
+    # Custom CSS
+    custom_css = []
+
+    # Custom JS
+    custom_js = []
+    math = true
+
+# # If you want to use fathom(https://usefathom.com) for analytics, add this section
+# [params.fathomAnalytics]
+#     siteID = "ABCDE"
+#     # Default value is cdn.usefathom.com, overwrite this if you are self-hosting
+#     serverURL = "analytics.example.com"
+    
+# # If you want to use plausible(https://plausible.io) for analytics, add this section
+# [params.plausibleAnalytics]
+#     domain = "example.com"
+#     # Default value is plausible.io, overwrite this if you are self-hosting or using a custom domain
+#     serverURL = "analytics.example.com"
+
+[taxonomies]
+  category = "categories"
+  series = "series"
+  tag = "tags"
+
+[[params.social]]
+    name = "Github"
+    icon = "fab fa-github"
+    weight = 1
+    url = "https://github.com/yuxguo/"
+
+[[params.social]]
+    name = "Mail"
+    icon = "fa fa-envelope"
+    weight = 2
+    url = "mailto:gyx_20170818@mail.ustc.edu.cn"
+
+[[params.social]]
+    name = "Zhihu"
+    icon = "fab fa-zhihu"
+    weight = 3
+    url = "https://www.zhihu.com/people/guo-yu-xuan-89"
+
+
+
+[languages]
+    [languages.en]
+        languagename = "English"
+
+        [languages.en.menu]
+
+            [[languages.en.menu.main]]
+            name = "About"
+            weight = 1
+            url = "about/"
+
+            [[languages.en.menu.main]]
+            name = "Blog"
+            weight = 2
+            url = "blogs/"
+
